--- a/BBC_News_Project/main.css
+++ b/BBC_News_Project/main.css
@@ -17,7 +17,6 @@ li a{
     text-decoration: none;
     color: white;
     align-content: flex-end;
-
 }
 
 .right {
@@ -28,6 +27,7 @@ li a{
 a:hover {
     color:#251414;
     transition: 400ms;
+
 }
 
 li {
@@ -57,13 +57,8 @@ article {
     letter-spacing: 0.5px;
 }
 
-.logo:hover {
-    color: #251414;
-    transition: 900ms;
-}
-
 li:hover {
-    transform: scale(1.05,1.05);
+    transform: scale(1.06,1.06);
     transition: 1000ms;
 }
 
@@ -71,7 +66,9 @@ nav {
     position: fixed;
     width: 100%;
 }
+
 /*Sigue Flexbox*/
+
 .BBC {
     display: flex;
     background-color: #7e0707;
@@ -83,7 +80,6 @@ nav {
 }
 
 .BBC a {
-    color: #D9D9D9;
     text-decoration: none;
     font-weight: 800;
     font-size: 3vw;
@@ -111,9 +107,6 @@ nav {
 }
 
 /* SIGUE GRID*/
-* {
-    margin: 0;
-}
 
 header {
     background-color: #7e0707;
@@ -188,9 +181,19 @@ de la caja.*/
 }
 
 a {
-    color: #D9D9D9;
     text-decoration: none;
     font-weight: 700;
-    font-size: 3vw;
+    font-size: 2vw;
     text-align: center;
+    color: white;
 }
+
+/*
+Si se usa la propiedad display, las animaciones no son compatibles, por lo tanto
+para usar esta transición, desactivar todos los display que afecten a la ul.
+
+.scaled:hover {
+    transform: scale(1.06,1.06);
+    transition: 1000ms;
+}
+*/
