--- a/main.css
+++ b/main.css
@@ -33,6 +33,11 @@ a {
     text-decoration: none;
 }
 
-
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px;
+}
 
 
