--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
-    color: rgb(250, 223, 149);
+}
+
+header {
+    flex-grow: 1;
+    color: white;
 }
 
 ul {
@@ -57,16 +61,30 @@ body {
         list-style: none;
         flex-direction: column;
     }
+
+    ul li{
+        display: none;
+    }
+/*Esto hace que la lista sea desplegable*/
+    ul:hover li {
+        display: block;
+    }
+
+    ul:hover {
+        cursor: pointer;
+    }
 }
 
+
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {...}
+@media only screen and (min-width: 600px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {...}
+@media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {...}
+@media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {...}
+@media only screen and (min-width: 1200px) {}
