--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body {
     background-image: url(Background_Images/bee3.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: auto;
+    background-size: cover;
 }
 
 /* Extra small devices (phones, 600px and down) */
