--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ main {
 body {
     background-image: url(Background_Images/bee3.jpg);
     background-repeat: no-repeat;
-    background-size: cover auto;
+    background-size: 100vw ;
 }
 
 /* Extra small devices (phones, 600px and down) */
