--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 * {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
     flex-grow: 1;
     color: white;
+    letter-spacing: 1px;
 }
 
 ul {
@@ -13,6 +15,8 @@ ul {
     justify-content: flex-end;
     gap: 3vw;
     list-style: none;
+    font-weight: 400;
+    align-items: center;
 }
 
 ul li:hover {
@@ -48,8 +52,7 @@ main {
 }
 
 .space {
-    flex-basis: 100vh;
-    width:100%
+    flex-basis: 70vh;
 }
 
 body {
@@ -58,8 +61,9 @@ body {
     top: 0;
     left: 0;
     /* Preserve aspet ratio */
-    min-width: 100vw;
-    min-height: 100vh;
+    background-size: cover;
+    background-repeat:no-repeat ;
+    overflow: auto; 
   }
 
 
@@ -89,7 +93,17 @@ body {
 
 
 p {
+    color: black;
+}
+
+button {
+    background: linear-gradient(to right, rgba(253, 253, 176, 0.05), rgba(47, 28, 1, 0.4));
+    border: none;
+    border-radius: 40px;
+    padding: 8px;
     color: white;
+    position: relative;
+    float: right;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
