--- a/main.css
+++ b/main.css
@@ -23,7 +23,6 @@ ul li:hover {
 
 nav {
     background: linear-gradient(to right, rgba(253, 253, 176, 0.02), rgba(47, 28, 1, 0.3));
-
 }
 
 a:hover {
@@ -40,11 +39,13 @@ a {
     text-decoration: none;
 }
 
+
 main {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin: 20px;
+    color: black;
 }
 
 .space {
@@ -52,14 +53,14 @@ main {
     width:100%
 }
 
-body {
-    background-image: url(Background_Images/bee3.jpg);
-    position: fixed;
+img {
     top: 0;
     left: 0;
     /* Preserve aspet ratio */
     min-width: 100vw;
-    min-height: 100vh;
+    
+    background-repeat: no-repeat;
+
   }
 
 
@@ -85,11 +86,6 @@ body {
     ul:hover {
         cursor: pointer;
     }
-}
-
-
-p {
-    color: white;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
